packages/win32/src/kernel32.g.h

MYLIB_EXPORT Win32Result HeapUnlock_Wrapper(HANDLE hHeap);
MYLIB_EXPORT Win32Result HeapWalk_Wrapper(HANDLE hHeap, PROCESS_HEAP_ENTRY* lpEntry);
MYLIB_EXPORT Win32Result InitializeProcThreadAttributeList_Wrapper(LPPROC_THREAD_ATTRIBUTE_LIST lpAttributeList, unsigned long dwAttributeCount, unsigned long dwFlags, unsigned long long* lpSize);
MYLIB_EXPORT Win32Result IsNativeVhdBoot_Wrapper(BOOL* nativeVhdBoot);
MYLIB_EXPORT Win32Result IsProcessInJob_Wrapper(HANDLE processHandle, HANDLE jobHandle, BOOL* result);
MYLIB_EXPORT Win32Result IsWow64Process2_Wrapper(HANDLE hProcess, USHORT* pProcessMachine, USHORT* pNativeMachine);
MYLIB_EXPORT Win32Result LoadLibraryW_Wrapper(PCWSTR lpLibFileName);
MYLIB_EXPORT Win32Result LoadLibraryExW_Wrapper(PCWSTR lpLibFileName, HANDLE hFile, DWORD dwFlags);
MYLIB_EXPORT Win32Result LoadResource_Wrapper(HMODULE hModule, HRSRC hResInfo);
MYLIB_EXPORT Win32Result LocalAlloc_Wrapper(DWORD uFlags, unsigned long long uBytes);
MYLIB_EXPORT Win32Result LocalFree_Wrapper(HLOCAL hMem);
MYLIB_EXPORT Win32Result LockFile_Wrapper(HANDLE hFile, unsigned long dwFileOffsetLow, unsigned long dwFileOffsetHigh, unsigned long nNumberOfBytesToLockLow, unsigned long nNumberOfBytesToLockHigh);
MYLIB_EXPORT Win32Result LockFileEx_Wrapper(HANDLE hFile, DWORD dwFlags, unsigned long dwReserved, unsigned long nNumberOfBytesToLockLow, unsigned long nNumberOfBytesToLockHigh, OVERLAPPED* lpOverlapped);
MYLIB_EXPORT Win32Result MoveFileW_Wrapper(PCWSTR lpExistingFileName, PCWSTR lpNewFileName);
MYLIB_EXPORT Win32Result MoveFileExW_Wrapper(PCWSTR lpExistingFileName, PCWSTR lpNewFileName, DWORD dwFlags);
MYLIB_EXPORT Win32Result OpenEventW_Wrapper(DWORD dwDesiredAccess, BOOL bInheritHandle, PCWSTR lpName);
MYLIB_EXPORT Win32Result OpenJobObjectW_Wrapper(unsigned long dwDesiredAccess, BOOL bInheritHandle, PCWSTR lpName);
MYLIB_EXPORT Win32Result OpenProcess_Wrapper(DWORD dwDesiredAccess, BOOL bInheritHandle, unsigned long dwProcessId);
MYLIB_EXPORT Win32Result PeekConsoleInputW_Wrapper(HANDLE hConsoleInput, INPUT_RECORD* lpBuffer, unsigned long nLength, unsigned long* lpNumberOfEventsRead);
MYLIB_EXPORT Win32Result PeekNamedPipe_Wrapper(HANDLE hNamedPipe, void* lpBuffer, unsigned long nBufferSize, unsigned long* lpBytesRead, unsigned long* lpTotalBytesAvail, unsigned long* lpBytesLeftThisMessage);
MYLIB_EXPORT Win32Result PostQueuedCompletionStatus_Wrapper(HANDLE completionPort, unsigned long dwNumberOfBytesTransferred, unsigned long long dwCompletionKey, OVERLAPPED* lpOverlapped);
MYLIB_EXPORT Win32Result ProcessIdToSessionId_Wrapper(unsigned long dwProcessId, unsigned long* pSessionId);
MYLIB_EXPORT Win32Result PurgeComm_Wrapper(HANDLE hFile, DWORD dwFlags);
MYLIB_EXPORT Win32Result QueryDosDeviceW_Wrapper(PCWSTR lpDeviceName, PWSTR lpTargetPath, unsigned long ucchMax);
MYLIB_EXPORT Win32Result QueryFullProcessImageNameW_Wrapper(HANDLE hProcess, DWORD dwFlags, PWSTR lpExeName, unsigned long* lpdwSize);
MYLIB_EXPORT Win32Result QueryInformationJobObject_Wrapper(HANDLE hJob, LONG jobObjectInformationClass, void* lpJobObjectInformation, unsigned long cbJobObjectInformationLength, unsigned long* lpReturnLength);
MYLIB_EXPORT Win32Result QueryIoRateControlInformationJobObject_Wrapper(HANDLE hJob, PCWSTR volumeName, JOBOBJECT_IO_RATE_CONTROL_INFORMATION** infoBlocks, unsigned long* infoBlockCount);
MYLIB_EXPORT Win32Result QueryPerformanceCounter_Wrapper(long long* lpPerformanceCount);
MYLIB_EXPORT Win32Result QueryPerformanceFrequency_Wrapper(long long* lpFrequency);
MYLIB_EXPORT Win32Result ReadConsoleW_Wrapper(HANDLE hConsoleInput, void* lpBuffer, unsigned long nNumberOfCharsToRead, unsigned long* lpNumberOfCharsRead, CONSOLE_READCONSOLE_CONTROL* pInputControl);
MYLIB_EXPORT Win32Result ReadConsoleInputW_Wrapper(HANDLE hConsoleInput, INPUT_RECORD* lpBuffer, unsigned long nLength, unsigned long* lpNumberOfEventsRead);
MYLIB_EXPORT Win32Result ReadFile_Wrapper(HANDLE hFile, unsigned char* lpBuffer, unsigned long nNumberOfBytesToRead, unsigned long* lpNumberOfBytesRead, OVERLAPPED* lpOverlapped);
MYLIB_EXPORT Win32Result ReadFileEx_Wrapper(HANDLE hFile, unsigned char* lpBuffer, unsigned long nNumberOfBytesToRead, OVERLAPPED* lpOverlapped, LPOVERLAPPED_COMPLETION_ROUTINE lpCompletionRoutine);
MYLIB_EXPORT Win32Result ReadFileScatter_Wrapper(HANDLE hFile, FILE_SEGMENT_ELEMENT* aSegmentArray, unsigned long nNumberOfBytesToRead, unsigned long* lpReserved, OVERLAPPED* lpOverlapped);
MYLIB_EXPORT Win32Result ReadProcessMemory_Wrapper(HANDLE hProcess, void* lpBaseAddress, void* lpBuffer, unsigned long long nSize, unsigned long long* lpNumberOfBytesRead);
MYLIB_EXPORT Win32Result RemoveDirectoryW_Wrapper(PCWSTR lpPathName);
MYLIB_EXPORT Win32Result RemoveDllDirectory_Wrapper(void* cookie);
MYLIB_EXPORT Win32Result ReOpenFile_Wrapper(HANDLE hOriginalFile, unsigned long dwDesiredAccess, DWORD dwShareMode, DWORD dwFlagsAndAttributes);
MYLIB_EXPORT Win32Result ResetEvent_Wrapper(HANDLE hEvent);
MYLIB_EXPORT Win32Result ScrollConsoleScreenBufferW_Wrapper(HANDLE hConsoleOutput, SMALL_RECT* lpScrollRectangle, SMALL_RECT* lpClipRectangle, COORD dwDestinationOrigin, CHAR_INFO* lpFill);
MYLIB_EXPORT Win32Result SetCommBreak_Wrapper(HANDLE hFile);
MYLIB_EXPORT Win32Result SetCommConfig_Wrapper(HANDLE hCommDev, COMMCONFIG* lpCC, unsigned long dwSize);
MYLIB_EXPORT Win32Result SetCommMask_Wrapper(HANDLE hFile, DWORD dwEvtMask);
MYLIB_EXPORT Win32Result SetCommState_Wrapper(HANDLE hFile, DCB* lpDCB);
MYLIB_EXPORT Win32Result SetCommTimeouts_Wrapper(HANDLE hFile, COMMTIMEOUTS* lpCommTimeouts);
MYLIB_EXPORT Win32Result SetConsoleCtrlHandler_Wrapper(PHANDLER_ROUTINE handlerRoutine, BOOL add);
MYLIB_EXPORT Win32Result SetConsoleCursorInfo_Wrapper(HANDLE hConsoleOutput, CONSOLE_CURSOR_INFO* lpConsoleCursorInfo);
MYLIB_EXPORT Win32Result SetConsoleCursorPosition_Wrapper(HANDLE hConsoleOutput, COORD dwCursorPosition);
MYLIB_EXPORT Win32Result SetConsoleDisplayMode_Wrapper(HANDLE hConsoleOutput, unsigned long dwFlags, COORD* lpNewScreenBufferDimensions);
MYLIB_EXPORT Win32Result SetConsoleMode_Wrapper(HANDLE hConsoleHandle, DWORD dwMode);
MYLIB_EXPORT Win32Result SetConsoleTextAttribute_Wrapper(HANDLE hConsoleOutput, USHORT wAttributes);
MYLIB_EXPORT Win32Result SetConsoleWindowInfo_Wrapper(HANDLE hConsoleOutput, BOOL bAbsolute, SMALL_RECT* lpConsoleWindow);
MYLIB_EXPORT Win32Result SetDefaultCommConfigW_Wrapper(PCWSTR lpszName, COMMCONFIG* lpCC, unsigned long dwSize);
MYLIB_EXPORT Win32Result SetDefaultDllDirectories_Wrapper(DWORD directoryFlags);
MYLIB_EXPORT Win32Result SetEndOfFile_Wrapper(HANDLE hFile);
MYLIB_EXPORT Win32Result SetEnvironmentVariableW_Wrapper(PCWSTR lpName, PCWSTR lpValue);