packages/win32/lib/src/_internal/kernel32.g.dart


@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result HeapUnlock_Wrapper(int hHeap);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<PROCESS_HEAP_ENTRY>)>()
external NativeWin32Result HeapWalk_Wrapper(
  int hHeap,
  Pointer<PROCESS_HEAP_ENTRY> lpEntry,
);

@internal
@Native<
  NativeWin32Result Function(
    LPPROC_THREAD_ATTRIBUTE_LIST,
    Uint32,
    Uint32,
    Pointer<IntPtr>,
  )
>()
external NativeWin32Result InitializeProcThreadAttributeList_Wrapper(
  int lpAttributeList,
  int dwAttributeCount,
  int dwFlags,
  Pointer<IntPtr> lpSize,
);

@internal
@Native<NativeWin32Result Function(Pointer<BOOL>)>()
external NativeWin32Result IsNativeVhdBoot_Wrapper(Pointer<BOOL> nativeVhdBoot);

@internal
@Native<NativeWin32Result Function(HANDLE, HANDLE, Pointer<BOOL>)>()
external NativeWin32Result IsProcessInJob_Wrapper(
  int processHandle,
  int jobHandle,
  Pointer<BOOL> result,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint16>, Pointer<Uint16>)>()
external NativeWin32Result IsWow64Process2_Wrapper(
  int hProcess,
  Pointer<Uint16> pProcessMachine,
  Pointer<Uint16> pNativeMachine,
);

@internal
@Native<NativeWin32Result Function(PCWSTR)>()
external NativeWin32Result LoadLibraryW_Wrapper(PCWSTR lpLibFileName);

@internal
@Native<NativeWin32Result Function(PCWSTR, HANDLE, Uint32)>()
external NativeWin32Result LoadLibraryExW_Wrapper(
  PCWSTR lpLibFileName,
  int hFile,
  int dwFlags,
);

@internal
@Native<NativeWin32Result Function(HMODULE, HRSRC)>()
external NativeWin32Result LoadResource_Wrapper(int hModule, int hResInfo);

@internal
@Native<NativeWin32Result Function(Uint32, IntPtr)>()
external NativeWin32Result LocalAlloc_Wrapper(int uFlags, int uBytes);

@internal
@Native<NativeWin32Result Function(HLOCAL)>()
external NativeWin32Result LocalFree_Wrapper(int hMem);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32, Uint32, Uint32, Uint32)>()
external NativeWin32Result LockFile_Wrapper(
  int hFile,
  int dwFileOffsetLow,
  int dwFileOffsetHigh,
  int nNumberOfBytesToLockLow,
  int nNumberOfBytesToLockHigh,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Uint32,
    Uint32,
    Uint32,
    Uint32,
    Pointer<OVERLAPPED>,
  )
>()
external NativeWin32Result LockFileEx_Wrapper(
  int hFile,
  int dwFlags,
  int dwReserved,
  int nNumberOfBytesToLockLow,
  int nNumberOfBytesToLockHigh,
  Pointer<OVERLAPPED> lpOverlapped,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PCWSTR)>()
external NativeWin32Result MoveFileW_Wrapper(
  PCWSTR lpExistingFileName,
  PCWSTR lpNewFileName,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PCWSTR, Uint32)>()
external NativeWin32Result MoveFileExW_Wrapper(
  PCWSTR lpExistingFileName,
  PCWSTR lpNewFileName,
  int dwFlags,
);

@internal
@Native<NativeWin32Result Function(Uint32, BOOL, PCWSTR)>()
external NativeWin32Result OpenEventW_Wrapper(
  int dwDesiredAccess,
  int bInheritHandle,
  PCWSTR lpName,
);

@internal
@Native<NativeWin32Result Function(Uint32, BOOL, PCWSTR)>()
external NativeWin32Result OpenJobObjectW_Wrapper(
  int dwDesiredAccess,
  int bInheritHandle,
  PCWSTR lpName,
);

@internal
@Native<NativeWin32Result Function(Uint32, BOOL, Uint32)>()
external NativeWin32Result OpenProcess_Wrapper(
  int dwDesiredAccess,
  int bInheritHandle,
  int dwProcessId,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<INPUT_RECORD>,
    Uint32,
    Pointer<Uint32>,
  )
>()
external NativeWin32Result PeekConsoleInputW_Wrapper(
  int hConsoleInput,
  Pointer<INPUT_RECORD> lpBuffer,
  int nLength,
  Pointer<Uint32> lpNumberOfEventsRead,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer,
    Uint32,
    Pointer<Uint32>,
    Pointer<Uint32>,
    Pointer<Uint32>,
  )
>()
external NativeWin32Result PeekNamedPipe_Wrapper(
  int hNamedPipe,
  Pointer lpBuffer,
  int nBufferSize,
  Pointer<Uint32> lpBytesRead,
  Pointer<Uint32> lpTotalBytesAvail,
  Pointer<Uint32> lpBytesLeftThisMessage,
);

@internal
@Native<
  NativeWin32Result Function(HANDLE, Uint32, IntPtr, Pointer<OVERLAPPED>)
>()
external NativeWin32Result PostQueuedCompletionStatus_Wrapper(
  int completionPort,
  int dwNumberOfBytesTransferred,
  int dwCompletionKey,
  Pointer<OVERLAPPED> lpOverlapped,
);

@internal
@Native<NativeWin32Result Function(Uint32, Pointer<Uint32>)>()
external NativeWin32Result ProcessIdToSessionId_Wrapper(
  int dwProcessId,
  Pointer<Uint32> pSessionId,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32)>()
external NativeWin32Result PurgeComm_Wrapper(int hFile, int dwFlags);

@internal
@Native<NativeWin32Result Function(PCWSTR, PWSTR, Uint32)>()
external NativeWin32Result QueryDosDeviceW_Wrapper(
  PCWSTR lpDeviceName,
  PWSTR lpTargetPath,
  int ucchMax,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32, PWSTR, Pointer<Uint32>)>()
external NativeWin32Result QueryFullProcessImageNameW_Wrapper(
  int hProcess,
  int dwFlags,
  PWSTR lpExeName,
  Pointer<Uint32> lpdwSize,
);

@internal
@Native<
  NativeWin32Result Function(HANDLE, Int32, Pointer, Uint32, Pointer<Uint32>)
>()
external NativeWin32Result QueryInformationJobObject_Wrapper(
  int hJob,
  int jobObjectInformationClass,
  Pointer lpJobObjectInformation,
  int cbJobObjectInformationLength,
  Pointer<Uint32> lpReturnLength,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    PCWSTR,
    Pointer<Pointer<JOBOBJECT_IO_RATE_CONTROL_INFORMATION>>,
    Pointer<Uint32>,
  )
>()
external NativeWin32Result QueryIoRateControlInformationJobObject_Wrapper(
  int hJob,
  PCWSTR volumeName,
  Pointer<Pointer<JOBOBJECT_IO_RATE_CONTROL_INFORMATION>> infoBlocks,
  Pointer<Uint32> infoBlockCount,
);

@internal
@Native<NativeWin32Result Function(Pointer<Int64>)>()
external NativeWin32Result QueryPerformanceCounter_Wrapper(
  Pointer<Int64> lpPerformanceCount,
);

@internal
@Native<NativeWin32Result Function(Pointer<Int64>)>()
external NativeWin32Result QueryPerformanceFrequency_Wrapper(
  Pointer<Int64> lpFrequency,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer,
    Uint32,
    Pointer<Uint32>,
    Pointer<CONSOLE_READCONSOLE_CONTROL>,
  )
>()
external NativeWin32Result ReadConsoleW_Wrapper(
  int hConsoleInput,
  Pointer lpBuffer,
  int nNumberOfCharsToRead,
  Pointer<Uint32> lpNumberOfCharsRead,
  Pointer<CONSOLE_READCONSOLE_CONTROL> pInputControl,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<INPUT_RECORD>,
    Uint32,
    Pointer<Uint32>,
  )
>()
external NativeWin32Result ReadConsoleInputW_Wrapper(
  int hConsoleInput,
  Pointer<INPUT_RECORD> lpBuffer,
  int nLength,
  Pointer<Uint32> lpNumberOfEventsRead,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<Uint8>,
    Uint32,
    Pointer<Uint32>,
    Pointer<OVERLAPPED>,
  )
>()
external NativeWin32Result ReadFile_Wrapper(
  int hFile,
  Pointer<Uint8> lpBuffer,
  int nNumberOfBytesToRead,
  Pointer<Uint32> lpNumberOfBytesRead,
  Pointer<OVERLAPPED> lpOverlapped,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<Uint8>,
    Uint32,
    Pointer<OVERLAPPED>,
    Pointer<NativeFunction<LPOVERLAPPED_COMPLETION_ROUTINE>>,
  )
>()
external NativeWin32Result ReadFileEx_Wrapper(
  int hFile,
  Pointer<Uint8> lpBuffer,
  int nNumberOfBytesToRead,
  Pointer<OVERLAPPED> lpOverlapped,
  Pointer<NativeFunction<LPOVERLAPPED_COMPLETION_ROUTINE>> lpCompletionRoutine,
);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<FILE_SEGMENT_ELEMENT>,
    Uint32,
    Pointer<Uint32>,
    Pointer<OVERLAPPED>,
  )
>()
external NativeWin32Result ReadFileScatter_Wrapper(
  int hFile,
  Pointer<FILE_SEGMENT_ELEMENT> aSegmentArray,
  int nNumberOfBytesToRead,
  Pointer<Uint32> lpReserved,
  Pointer<OVERLAPPED> lpOverlapped,
);

@internal
@Native<
  NativeWin32Result Function(HANDLE, Pointer, Pointer, IntPtr, Pointer<IntPtr>)
>()
external NativeWin32Result ReadProcessMemory_Wrapper(
  int hProcess,
  Pointer lpBaseAddress,
  Pointer lpBuffer,
  int nSize,
  Pointer<IntPtr> lpNumberOfBytesRead,
);

@internal
@Native<NativeWin32Result Function(PCWSTR)>()
external NativeWin32Result RemoveDirectoryW_Wrapper(PCWSTR lpPathName);

@internal
@Native<NativeWin32Result Function(Pointer)>()
external NativeWin32Result RemoveDllDirectory_Wrapper(Pointer cookie);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32, Uint32, Uint32)>()
external NativeWin32Result ReOpenFile_Wrapper(
  int hOriginalFile,
  int dwDesiredAccess,
  int dwShareMode,
  int dwFlagsAndAttributes,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result ResetEvent_Wrapper(int hEvent);

@internal
@Native<
  NativeWin32Result Function(
    HANDLE,
    Pointer<SMALL_RECT>,
    Pointer<SMALL_RECT>,
    COORD,
    Pointer<CHAR_INFO>,
  )
>()
external NativeWin32Result ScrollConsoleScreenBufferW_Wrapper(
  int hConsoleOutput,
  Pointer<SMALL_RECT> lpScrollRectangle,
  Pointer<SMALL_RECT> lpClipRectangle,
  COORD dwDestinationOrigin,
  Pointer<CHAR_INFO> lpFill,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result SetCommBreak_Wrapper(int hFile);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<COMMCONFIG>, Uint32)>()
external NativeWin32Result SetCommConfig_Wrapper(
  int hCommDev,
  Pointer<COMMCONFIG> lpCC,
  int dwSize,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32)>()
external NativeWin32Result SetCommMask_Wrapper(int hFile, int dwEvtMask);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<DCB>)>()
external NativeWin32Result SetCommState_Wrapper(int hFile, Pointer<DCB> lpDCB);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<COMMTIMEOUTS>)>()
external NativeWin32Result SetCommTimeouts_Wrapper(
  int hFile,
  Pointer<COMMTIMEOUTS> lpCommTimeouts,
);

@internal
@Native<
  NativeWin32Result Function(Pointer<NativeFunction<PHANDLER_ROUTINE>>, BOOL)
>()
external NativeWin32Result SetConsoleCtrlHandler_Wrapper(
  Pointer<NativeFunction<PHANDLER_ROUTINE>> handlerRoutine,
  int add,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<CONSOLE_CURSOR_INFO>)>()
external NativeWin32Result SetConsoleCursorInfo_Wrapper(
  int hConsoleOutput,
  Pointer<CONSOLE_CURSOR_INFO> lpConsoleCursorInfo,
);

@internal
@Native<NativeWin32Result Function(HANDLE, COORD)>()
external NativeWin32Result SetConsoleCursorPosition_Wrapper(
  int hConsoleOutput,
  COORD dwCursorPosition,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32, Pointer<COORD>)>()
external NativeWin32Result SetConsoleDisplayMode_Wrapper(
  int hConsoleOutput,
  int dwFlags,
  Pointer<COORD> lpNewScreenBufferDimensions,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32)>()
external NativeWin32Result SetConsoleMode_Wrapper(
  int hConsoleHandle,
  int dwMode,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint16)>()
external NativeWin32Result SetConsoleTextAttribute_Wrapper(
  int hConsoleOutput,
  int wAttributes,
);

@internal
@Native<NativeWin32Result Function(HANDLE, BOOL, Pointer<SMALL_RECT>)>()
external NativeWin32Result SetConsoleWindowInfo_Wrapper(
  int hConsoleOutput,
  int bAbsolute,
  Pointer<SMALL_RECT> lpConsoleWindow,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, Pointer<COMMCONFIG>, Uint32)>()
external NativeWin32Result SetDefaultCommConfigW_Wrapper(
  PCWSTR lpszName,
  Pointer<COMMCONFIG> lpCC,
  int dwSize,
);

@internal
@Native<NativeWin32Result Function(Uint32)>()
external NativeWin32Result SetDefaultDllDirectories_Wrapper(int directoryFlags);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result SetEndOfFile_Wrapper(int hFile);

@internal
@Native<NativeWin32Result Function(PCWSTR, PCWSTR)>()
external NativeWin32Result SetEnvironmentVariableW_Wrapper(
  PCWSTR lpName,
  PCWSTR lpValue,
);
